ajout de class pour la nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="./img/site_icon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <title>Portefolio de Léandre Bughin</title>
 
 </head>
@@ -24,6 +25,11 @@
             <li>
                 <a href="#">Cv</a>
             </li>
+        </div>
+            <div class="photo_nav">
+                <img src="./img/img_nav.png" alt="img_nav">
+            </div>
+            <div class="onglet_nav">
             <li>
                 <a href="#">Book</a>
             </li>
