ajout de class pour la nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="./img/site_icon.png" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <title>Portefolio de Léandre Bughin</title>
 
 </head>
@@ -18,34 +18,38 @@
         <div class="logo_nav">
             <img src="./img/site_icon.png" alt="site_icon">
         </div>
-        <div class="onglet_nav">
-            <li>
-                <a href="#">Acceuil</a>
-            </li>
-            <li>
-                <a href="#">Cv</a>
-            </li>
-        </div>
+        <div class="menu_nav">
+            <div>
+                <li>
+                    <a href="#">Acceuil</a>
+                </li>
+                <li>
+                    <a href="#">Cv</a>
+                </li>
+            </div>
             <div class="photo_nav">
                 <img src="./img/img_nav.png" alt="img_nav">
             </div>
-            <div class="onglet_nav">
-            <li>
-                <a href="#">Book</a>
-            </li>
-            <li>
-                <a href="#">Me Contacter</a>
-            </li>
+            <div>
+                <li>
+                    <a href="#">Book</a>
+                </li>
+                <li>
+                    <a href="#">Me Contacter</a>
+                </li>
+            </div>
         </div>
         <div class="reseaux_nav">
             <li>
                 <a href="https://www.behance.net/leandrebughin"><i class="fab fa-behance"></i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/l%C3%A9andre-bughin-5816b6131/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/l%C3%A9andre-bughin-5816b6131/"><i
+                        class="fab fa-linkedin-in"></i></a>
             </li>
             <li>
-                <a href="https://github.com/LeandrenewL?tab=overview&from=2022-01-01&to=2022-01-24"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/LeandrenewL?tab=overview&from=2022-01-01&to=2022-01-24"><i
+                        class="fab fa-github"></i></a>
             </li>
         </div>
     </nav>
