--- a/index.html
+++ b/index.html
@@ -7,63 +7,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/png" href="./img/site_icon.png" />
+    <link rel="icon" type="image/png" href="./img/Icone_Leandre_BUGHIN_Degrades.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <title>Portefolio de Léandre Bughin</title>
 
 </head>
 
 <body>
-    <nav>
-        <div class="logo_nav">
-            <img src="./img/site_icon.png" alt="site_icon">
-        </div>
-        <div class="menu_nav">
-            <div>
-                <ul>
-                    <li>
-                        <a href="#">Acceuil</a>
-                    </li>
-                    <li>
-                        <a href="#">Cv</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="photo_nav">
-                <img src="./img/img_nav.png" alt="img_nav">
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <a href="#">Book</a>
-                    </li>
-                    <li>
-                        <a href="#">Me Contacter</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="reseaux_nav">
-        <ul>
-            <li>
-                <a href="https://www.behance.net/leandrebughin"><i class="fab fa-behance"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/l%C3%A9andre-bughin-5816b6131/"><i
-                        class="fab fa-linkedin-in"></i></a>
-            </li>
-            <li>
-                <a href="https://github.com/LeandrenewL?tab=overview&from=2022-01-01&to=2022-01-24"><i
-                        class="fab fa-github"></i></a>
-            </li>
-        </ul>
-        </div>
-    </nav>
     <header>
-
+        <nav>
+            <div class="logo_nav">
+                <img src="./img/Icone_Leandre_BUGHIN_Degrades.png" alt="site_icon">
+            </div>
+            <div class="menu_nav">
+                <div>
+                    <ul>
+                        <li>
+                            <a href="#">Acceuil</a>
+                        </li>
+                        <li>
+                            <a href="#">Cv</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="photo_nav">
+                    <img src="./img/img_nav.png" alt="img_nav">
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="#">Book</a>
+                        </li>
+                        <li>
+                            <a href="#">Me Contacter</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="reseaux_nav">
+                <ul>
+                    <li>
+                        <a href="https://www.behance.net/leandrebughin" target="_blank"><i
+                                class="fab fa-behance"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/l%C3%A9andre-bughin-5816b6131/" target="_blank"><i
+                                class="fab fa-linkedin-in"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/LeandrenewL?tab=overview&from=2022-01-01&to=2022-01-24"
+                            target="_blank"><i class="fab fa-github"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="header_deux">
+            <h1>Bienvue</h1>
+            <h2>sur le Portefolio de</h2>
+            <h2>Bughin</h2>
+            <h2>Léandre</h2>
+        </div>
     </header>
-
-
+    <main>
+        <div class="one_dive">
+            
+        </div>
+    </main>
     <footer>
         <div>
             <ul>
