--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#">Acceuil</a>
                         </li>
                         <li>
-                            <a href="#">Cv</a>
+                            <a href="#">CV</a>
                         </li>
                     </ul>
                 </div>
@@ -64,8 +64,7 @@
         <div class="header_deux">
             <h1>Bienvue</h1>
             <h2>sur le Portefolio de</h2>
-            <h2>Bughin</h2>
-            <h2>Léandre</h2>
+            <img src="./img/texte_img.png" alt="texte_img">
         </div>
     </header>
     <main>
