ajout de texte pour le header 2

--- a/index.html
+++ b/index.html
@@ -62,14 +62,27 @@
             </div>
         </nav>
         <div class="header_deux">
-            <h1>Bienvue</h1>
-            <h2>sur le Portefolio de</h2>
-            <img src="./img/texte_img.png" alt="texte_img">
+            <div class="deux_a">
+                <p>
+                    Bienvenue <br> Portefolio de
+                </p>
+                <img src="./img/texte_img.png" alt="texte_img">
+            </div>
+            <div class="deux_b">
+                <h2>
+                    <i class="fas fa-paint-brush"></i>
+                    Infographiste
+                </h2>
+                <h2>
+                    Graphiste
+                    <i class="fas fa-laptop-code"></i>
+                </h2>
+            </div>
         </div>
     </header>
     <main>
         <div class="one_dive">
-            
+
         </div>
     </main>
     <footer>
