ajout de la parti cv

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </div>
         </nav>
         <div class="header_deux">
+            <div class="deux_background">
             <div class="deux_a">
                 <p>
                     Bienvenue <br> Portefolio de
@@ -79,10 +80,18 @@
                 </h2>
             </div>
         </div>
+    </div>
     </header>
     <main>
-        <div class="one_dive">
-
+        <div class="one_div">
+            <i class="far fa-eye"></i>
+            <h2>
+                Aperçu complet <br> du CV
+            </h2>
+            <i class="far fa-file-pdf"></i>
+            <h2>
+                Télécharger le CV <br> en format PDF
+            </h2>
         </div>
     </main>
     <footer>
