--- a/index.html
+++ b/index.html
@@ -84,14 +84,21 @@
     </header>
     <main>
         <div class="one_div">
-            <i class="far fa-eye"></i>
             <h2>
+                <i class="far fa-eye"></i> <br>
                 Aperçu complet <br> du CV
             </h2>
-            <i class="far fa-file-pdf"></i>
             <h2>
+                <i class="far fa-file-pdf"></i> <br>
                 Télécharger le CV <br> en format PDF
             </h2>
+        </div>
+        <div class="two_div">
+            <img src="./img/ASENKA_logo.png" alt="ASENKA_logo">
+            <img src="./img/Fred_new_logo_test_retro_avec_texte.png" alt="Fred_new_logo_test_retro_avec_texte">
+            <img src="./img/Logo-Icon-Guilde-Noob-by-NewLBlack-v2.png" alt="Logo-Icon-Guilde-Noob-by-NewLBlack-v2">
+            <img src="./img/Argol_Kingdom_Heart_Logo_1200x1200.png" alt="Argol_Kingdom_Heart_Logo_1200x1200">
+            <img src="./img/Logo_Leiidy_Dark_v2.png" alt="Logo_Leiidy_Dark_v2">
         </div>
     </main>
     <footer>
