--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="./img/Icone_Leandre_BUGHIN_Degrades.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <title>Portefolio de Léandre Bughin</title>
+    <title>Portfolio de Léandre Bughin</title>
 
 </head>
 
@@ -23,7 +23,7 @@
                 <div>
                     <ul>
                         <li>
-                            <a href="#">Acceuil</a>
+                            <a href="#">Accueil</a>
                         </li>
                         <li>
                             <a href="#">CV</a>
@@ -65,33 +65,34 @@
             <div class="deux_background">
             <div class="deux_a">
                 <p>
-                    Bienvenue <br> Portefolio de
+                    Bienvenue <br> Portfolio de
                 </p>
                 <img src="./img/texte_img.png" alt="texte_img">
             </div>
             <div class="deux_b">
+                <i class="fas fa-paint-brush"></i>
                 <h2>
-                    <i class="fas fa-paint-brush"></i>
                     Infographiste
                 </h2>
                 <h2>
                     Graphiste
-                    <i class="fas fa-laptop-code"></i>
                 </h2>
+                <i class="fas fa-laptop-code"></i>
             </div>
         </div>
     </div>
     </header>
     <main>
         <div class="one_div">
+            <i class="far fa-eye"></i>
             <h2>
-                <i class="far fa-eye"></i> <br>
                 Aperçu complet <br> du CV
             </h2>
+            <i class="far fa-file-pdf"></i>
             <h2>
-                <i class="far fa-file-pdf"></i> <br>
                 Télécharger le CV <br> en format PDF
             </h2>
+            <img src="./img/cv_competences.jpg" alt="cv_competences">
         </div>
         <div class="two_div">
             <img src="./img/ASENKA_logo.png" alt="ASENKA_logo">
@@ -100,9 +101,27 @@
             <img src="./img/Argol_Kingdom_Heart_Logo_1200x1200.png" alt="Argol_Kingdom_Heart_Logo_1200x1200">
             <img src="./img/Logo_Leiidy_Dark_v2.png" alt="Logo_Leiidy_Dark_v2">
         </div>
+        <div class="three_div">
+            <i class="fas fa-pencil-alt"></i>
+            <img src="./img/texte2_img.png" alt="texte2_img">
+            <h2 class="mail_colors">bughin.leandre@gmail.com</h2>
+            <h2 class="num_colors">06 05 02 28 99</h2>
+        </div>
+        <div class="four_div">
+            <i class="fab fa-earlybirds"></i>
+            <form method="post">
+                <label>Nom</label> <input type="text" name="Nom" required />
+                <label>Intitule</label> <input type="text" name="Intitule" required />
+                <label>Description</label> <input type="text" name="Description" required />
+            </form>
+            <input type="submit" value="Envoyer">
+        </div>
     </main>
     <footer>
-        <div>
+        <div class="one_footer">
+            
+        </div>
+        <div class="two_footer">
             <ul>
                 <li>&copy;2022 - Création de BUGHIN Léandre | Tout Droits réservé.</li>
             </ul>
